@@ -2,7 +2,7 @@
     {{-- Header --}}
     @slot('header')
         @component('mail::header', ['url' => config('app.url')])
-            {{ config('app.name') }}
+            {{ config('app.display_name') }}
         @endcomponent
     @endslot
 
@@ -21,7 +21,7 @@
     {{-- Footer --}}
     @slot('footer')
         @component('mail::footer')
-            &copy; {{ date('Y') }} {{ config('app.name') }}. @lang('mail.notifications_rights').
+            &copy; {{ date('Y') }} {{ config('app.display_name') }}. @lang('mail.notifications_rights').
         @endcomponent
     @endslot
 @endcomponent
